# parse-uspto-xml

./: .gitignore  README.md  parse_patent.py  pyproject.toml  requirements.txt  setup_loggers.py
config/: README.md  psql_setup_script.sh
parse_uspto_xml/: __init__.py  parse_patent.py  setup_loggers.py  version.py
parse_uspto_xml/utils/: db_interface.py
utils/: db_interface.py
