[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "parse-uspto-xml"
authors = [
    {name = "Austin Walters", email = "austin@agw.io"},
    {name = "Jeremy Goodsitt", email = "jeremy.goodsitt@gmail.com"},
]
description = "Reads XML of uspto patents."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version", "readme", "dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"]}
version = {attr = "parse_uspto_xml.__version__"}

[tool.setuptools]
packages = ["parse_uspto_xml"]
